feat: add login api

--- a/src/i18n/locales/en/common.json
+++ b/src/i18n/locales/en/common.json
@@ -16,6 +16,7 @@
     "zh": "Traditional Chinese"
   },
   "common": {
-    "logout": "Logout"
+    "logout": "Logout",
+    "loading": "Loading..."
   }
 } 
