--- a/src/i18n/locales/zh/common.json
+++ b/src/i18n/locales/zh/common.json
@@ -21,5 +21,51 @@
   "common": {
     "logout": "登出",
     "loading": "載入中..."
+  },
+  "pagination": {
+    "showing": "顯示第 {start} 到 {end} 條，共 {total} 條",
+    "previous": "上一頁",
+    "next": "下一頁"
+  },
+  "taskList": {
+    "addTask": "新增任務",
+    "search": {
+      "placeholder": "搜尋任務名稱...",
+      "button": "搜尋",
+      "clear": "清除"
+    },
+    "perPage": {
+      "label": "每頁顯示：",
+      "placeholder": "選擇數量"
+    },
+    "table": {
+      "name": "任務名稱",
+      "status": "狀態",
+      "progress": "進度",
+      "dueDate": "截止日期",
+      "created": "創建時間",
+      "actions": "操作",
+      "edit": "編輯任務",
+      "delete": "刪除任務"
+    },
+    "status": {
+      "pending": "待處理",
+      "inProgress": "進行中",
+      "completed": "已完成"
+    },
+    "dialog": {
+      "deleteTitle": "確認刪除",
+      "deleteDescription": "確認要刪除這個任務嗎？",
+      "deleteSuccess": "任務已刪除",
+      "deleteError": "刪除任務失敗",
+      "updateSuccess": "任務已更新",
+      "updateError": "更新任務失敗",
+      "createSuccess": "任務已創建",
+      "createError": "創建任務失敗"
+    },
+    "debug": {
+      "failedCreateTask": "創建任務失敗:",
+      "failedUpdateTask": "更新任務失敗:"
+    }
   }
 } 
