--- a/src/i18n/locales/en/common.json
+++ b/src/i18n/locales/en/common.json
@@ -20,12 +20,17 @@
   },
   "common": {
     "logout": "Logout",
-    "loading": "Loading..."
+    "loading": "Loading...",
+    "save": "Save",
+    "create": "Create"
   },
   "pagination": {
     "showing": "Showing {start} to {end} of {total} entries",
-    "previous": "Previous",
-    "next": "Next"
+    "pageInfo": "Page {current} of {total}",
+    "first": "First page",
+    "previous": "Previous page",
+    "next": "Next page",
+    "last": "Last page"
   },
   "taskList": {
     "addTask": "Add Task",
@@ -66,6 +71,51 @@
     "debug": {
       "failedCreateTask": "Failed to create task:",
       "failedUpdateTask": "Failed to update task:"
+    }
+  },
+  "userList": {
+    "addUser": "Add User",
+    "search": {
+      "placeholder": "Search users...",
+      "clear": "Clear"
+    },
+    "perPage": {
+      "label": "Per page:",
+      "placeholder": "Select"
+    },
+    "table": {
+      "name": "Name",
+      "email": "Email",
+      "role": "Role",
+      "created": "Created",
+      "actions": "Actions",
+      "edit": "Edit User",
+      "delete": "Delete User"
+    },
+    "dialog": {
+      "createTitle": "Create User",
+      "editTitle": "Edit User",
+      "deleteTitle": "Confirm Delete",
+      "deleteDescription": "Are you sure you want to delete this user?",
+      "createSuccess": "User created successfully",
+      "createError": "Failed to create user",
+      "updateSuccess": "User updated successfully",
+      "updateError": "Failed to update user",
+      "deleteSuccess": "User deleted successfully",
+      "deleteError": "Failed to delete user"
+    },
+    "form": {
+      "name": "Name",
+      "email": "Email",
+      "role": "Role",
+      "password": "Password",
+      "newPassword": "New Password",
+      "passwordPlaceholder": "Leave blank to keep unchanged",
+      "selectRole": "Select role",
+      "roles": {
+        "user": "User",
+        "admin": "Administrator"
+      }
     }
   }
 } 
