--- a/src/i18n/locales/zh/common.json
+++ b/src/i18n/locales/zh/common.json
@@ -117,5 +117,40 @@
         "admin": "管理員"
       }
     }
+  },
+  "roleList": {
+    "addRole": "新增角色",
+    "search": {
+      "placeholder": "搜尋角色...",
+      "clear": "清除"
+    },
+    "perPage": {
+      "label": "每頁顯示：",
+      "placeholder": "選擇數量"
+    },
+    "table": {
+      "rolename": "角色名稱",
+      "created": "建立時間",
+      "actions": "操作",
+      "edit": "編輯",
+      "delete": "刪除"
+    },
+    "dialog": {
+      "createTitle": "新增角色",
+      "editTitle": "編輯角色",
+      "deleteTitle": "刪除角色",
+      "deleteDescription": "確定要刪除這個角色嗎？此操作無法復原。",
+      "createSuccess": "角色建立成功",
+      "updateSuccess": "角色更新成功",
+      "deleteSuccess": "角色刪除成功",
+      "error": "操作失敗，請稍後再試"
+    },
+    "form": {
+      "rolename": {
+        "label": "角色名稱",
+        "placeholder": "請輸入角色名稱",
+        "required": "請輸入角色名稱"
+      }
+    }
   }
 } 
